feat: added timeline confirmation
